--- a/Adjust_Data.ipynb
+++ b/Adjust_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +209,7 @@
        "[85870 rows x 8 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,17 +221,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[(df[\"stateDescription\"] == \"New York\")]\n",
+    "df = df[(df[\"stateDescription\"] == \"New York\") & (df['sectorName'] == 'all sectors')]\n",
     "df.to_excel(\"New York.xlsx\", index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +419,7 @@
        "[197161 rows x 7 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,12 +430,262 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "dfk = dfk[(dfk[\"Commodity\"] == \"Lemon\")]\n",
     "dfk.to_excel(\"Lemon.xlsx\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Airline</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Baggage</th>\n",
+       "      <th>Scheduled</th>\n",
+       "      <th>Cancelled</th>\n",
+       "      <th>Enplaned</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>American Eagle</td>\n",
+       "      <td>01/2004</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>12502</td>\n",
+       "      <td>38276</td>\n",
+       "      <td>2481</td>\n",
+       "      <td>992360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>American Eagle</td>\n",
+       "      <td>02/2004</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>8977</td>\n",
+       "      <td>35762</td>\n",
+       "      <td>886</td>\n",
+       "      <td>1060618</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>American Eagle</td>\n",
+       "      <td>03/2004</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>10289</td>\n",
+       "      <td>39445</td>\n",
+       "      <td>1346</td>\n",
+       "      <td>1227469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>American Eagle</td>\n",
+       "      <td>04/2004</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>8095</td>\n",
+       "      <td>38982</td>\n",
+       "      <td>755</td>\n",
+       "      <td>1234451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>American Eagle</td>\n",
+       "      <td>05/2004</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>10618</td>\n",
+       "      <td>40422</td>\n",
+       "      <td>2206</td>\n",
+       "      <td>1267581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>247</th>\n",
+       "      <td>United</td>\n",
+       "      <td>08/2010</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>14099</td>\n",
+       "      <td>30637</td>\n",
+       "      <td>344</td>\n",
+       "      <td>4263211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>248</th>\n",
+       "      <td>United</td>\n",
+       "      <td>09/2010</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>9435</td>\n",
+       "      <td>28072</td>\n",
+       "      <td>161</td>\n",
+       "      <td>3679517</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>249</th>\n",
+       "      <td>United</td>\n",
+       "      <td>10/2010</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>9565</td>\n",
+       "      <td>29144</td>\n",
+       "      <td>140</td>\n",
+       "      <td>3952549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>250</th>\n",
+       "      <td>United</td>\n",
+       "      <td>11/2010</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>8597</td>\n",
+       "      <td>27318</td>\n",
+       "      <td>104</td>\n",
+       "      <td>3573268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>251</th>\n",
+       "      <td>United</td>\n",
+       "      <td>12/2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>14415</td>\n",
+       "      <td>27619</td>\n",
+       "      <td>599</td>\n",
+       "      <td>3493643</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>252 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Airline     Date  Month  Year  Baggage  Scheduled  Cancelled  \\\n",
+       "0    American Eagle  01/2004      1  2004    12502      38276       2481   \n",
+       "1    American Eagle  02/2004      2  2004     8977      35762        886   \n",
+       "2    American Eagle  03/2004      3  2004    10289      39445       1346   \n",
+       "3    American Eagle  04/2004      4  2004     8095      38982        755   \n",
+       "4    American Eagle  05/2004      5  2004    10618      40422       2206   \n",
+       "..              ...      ...    ...   ...      ...        ...        ...   \n",
+       "247          United  08/2010      8  2010    14099      30637        344   \n",
+       "248          United  09/2010      9  2010     9435      28072        161   \n",
+       "249          United  10/2010     10  2010     9565      29144        140   \n",
+       "250          United  11/2010     11  2010     8597      27318        104   \n",
+       "251          United  12/2010     12  2010    14415      27619        599   \n",
+       "\n",
+       "     Enplaned  \n",
+       "0      992360  \n",
+       "1     1060618  \n",
+       "2     1227469  \n",
+       "3     1234451  \n",
+       "4     1267581  \n",
+       "..        ...  \n",
+       "247   4263211  \n",
+       "248   3679517  \n",
+       "249   3952549  \n",
+       "250   3573268  \n",
+       "251   3493643  \n",
+       "\n",
+       "[252 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfj = pd.read_csv(\"baggagecomplaints.csv\")\n",
+    "dfj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfj = dfj[(dfj[\"Airline\"] == \"American Eagle\")]\n",
+    "dfj.to_excel(\"Airline.xlsx\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting statsmodels\n",
+      "  Downloading statsmodels-0.14.2-cp310-cp310-win_amd64.whl.metadata (9.5 kB)\n",
+      "Requirement already satisfied: numpy>=1.22.3 in c:\\users\\esteb\\miniconda3\\envs\\iteso\\lib\\site-packages (from statsmodels) (1.26.4)\n",
+      "Requirement already satisfied: scipy!=1.9.2,>=1.8 in c:\\users\\esteb\\miniconda3\\envs\\iteso\\lib\\site-packages (from statsmodels) (1.14.0)\n",
+      "Requirement already satisfied: pandas!=2.1.0,>=1.4 in c:\\users\\esteb\\miniconda3\\envs\\iteso\\lib\\site-packages (from statsmodels) (2.2.2)\n",
+      "Collecting patsy>=0.5.6 (from statsmodels)\n",
+      "  Downloading patsy-0.5.6-py2.py3-none-any.whl.metadata (3.5 kB)\n",
+      "Requirement already satisfied: packaging>=21.3 in c:\\users\\esteb\\miniconda3\\envs\\iteso\\lib\\site-packages (from statsmodels) (24.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\esteb\\miniconda3\\envs\\iteso\\lib\\site-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2.9.0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\esteb\\miniconda3\\envs\\iteso\\lib\\site-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\esteb\\miniconda3\\envs\\iteso\\lib\\site-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2024.1)\n",
+      "Requirement already satisfied: six in c:\\users\\esteb\\miniconda3\\envs\\iteso\\lib\\site-packages (from patsy>=0.5.6->statsmodels) (1.16.0)\n",
+      "Downloading statsmodels-0.14.2-cp310-cp310-win_amd64.whl (9.8 MB)\n",
+      "   ---------------------------------------- 0.0/9.8 MB ? eta -:--:--\n",
+      "   ---- ----------------------------------- 1.0/9.8 MB 10.1 MB/s eta 0:00:01\n",
+      "   -------------------- ------------------- 5.0/9.8 MB 16.8 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 9.8/9.8 MB 19.2 MB/s eta 0:00:00\n",
+      "Downloading patsy-0.5.6-py2.py3-none-any.whl (233 kB)\n",
+      "Installing collected packages: patsy, statsmodels\n",
+      "Successfully installed patsy-0.5.6 statsmodels-0.14.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install statsmodels"
    ]
   }
  ],
