Definicion del Problema

--- a/New_York.ipynb
+++ b/New_York.ipynb
@@ -1083,6 +1083,28 @@
     "***¿Los datos empalman en rango de tiempo y periodicidad (diarios/mes)?***  \n",
     "Si"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Definición del problema**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En esta serie de tiempo podemos ver como distintas cosas la afectan, en donde la principal son los periodos donde la gente suele pasar mas tiempo en casa como lo son las **vacaciones** o incluso pandemias como la del **covid 19**, esto lo sabemos ya que si observamos detenidamente veremos que para todos los años hay un aumento en el precio de la electricidad despues de un periodo vaccional como lo son las vacaciones de verano, ademas tambien podemos ver como el precio de la electricidad se dispara en 2020 año en el que es declarada oficialmente la pandemaia, lo que hace muchas personas se mantengan de manera consecutiva en sus casas y consuman mayor electricidad devido a las clases virtuales y los trabajos remotos; igualemte podemos empezar a notar una desminucion en el precio de la electricidad mitades del año 2023 en donde la pandemia es levantada, esta baja del precio se mantiene hasta dia de hoy sin embargo con la implementacion de los trabajos remotos no llega a precios como losde el año 2019 y anteriores "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://factorenergetico.mx/gasto-energetico-de-ee-uu-aumento-un-25-en-terminos-reales-en-2021/\n",
+    "https://datosmacro.expansion.com/energia-y-medio-ambiente/electricidad-consumo/usa\n"
+   ]
   }
  ],
  "metadata": {
