--- a/Adjust_Data.ipynb
+++ b/Adjust_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
        "[85870 rows x 8 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "[197161 rows x 7 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
        "[252 rows x 8 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,49 +643,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Airline</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Baggage</th>\n",
+       "      <th>Scheduled</th>\n",
+       "      <th>Cancelled</th>\n",
+       "      <th>Enplaned</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>American Eagle</td>\n",
+       "      <td>01/2004</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>12502</td>\n",
+       "      <td>38276</td>\n",
+       "      <td>2481</td>\n",
+       "      <td>992360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>American Eagle</td>\n",
+       "      <td>02/2004</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>8977</td>\n",
+       "      <td>35762</td>\n",
+       "      <td>886</td>\n",
+       "      <td>1060618</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>American Eagle</td>\n",
+       "      <td>03/2004</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>10289</td>\n",
+       "      <td>39445</td>\n",
+       "      <td>1346</td>\n",
+       "      <td>1227469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>American Eagle</td>\n",
+       "      <td>04/2004</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>8095</td>\n",
+       "      <td>38982</td>\n",
+       "      <td>755</td>\n",
+       "      <td>1234451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>American Eagle</td>\n",
+       "      <td>05/2004</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>10618</td>\n",
+       "      <td>40422</td>\n",
+       "      <td>2206</td>\n",
+       "      <td>1267581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>American Eagle</td>\n",
+       "      <td>08/2010</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>9583</td>\n",
+       "      <td>37697</td>\n",
+       "      <td>538</td>\n",
+       "      <td>1388344</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>American Eagle</td>\n",
+       "      <td>09/2010</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>8324</td>\n",
+       "      <td>36524</td>\n",
+       "      <td>630</td>\n",
+       "      <td>1336997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>American Eagle</td>\n",
+       "      <td>10/2010</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>8498</td>\n",
+       "      <td>37766</td>\n",
+       "      <td>542</td>\n",
+       "      <td>1462312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>American Eagle</td>\n",
+       "      <td>11/2010</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>8067</td>\n",
+       "      <td>35778</td>\n",
+       "      <td>335</td>\n",
+       "      <td>1346419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>American Eagle</td>\n",
+       "      <td>12/2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>11526</td>\n",
+       "      <td>36605</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>1298950</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>84 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Airline     Date  Month  Year  Baggage  Scheduled  Cancelled  \\\n",
+       "0   American Eagle  01/2004      1  2004    12502      38276       2481   \n",
+       "1   American Eagle  02/2004      2  2004     8977      35762        886   \n",
+       "2   American Eagle  03/2004      3  2004    10289      39445       1346   \n",
+       "3   American Eagle  04/2004      4  2004     8095      38982        755   \n",
+       "4   American Eagle  05/2004      5  2004    10618      40422       2206   \n",
+       "..             ...      ...    ...   ...      ...        ...        ...   \n",
+       "79  American Eagle  08/2010      8  2010     9583      37697        538   \n",
+       "80  American Eagle  09/2010      9  2010     8324      36524        630   \n",
+       "81  American Eagle  10/2010     10  2010     8498      37766        542   \n",
+       "82  American Eagle  11/2010     11  2010     8067      35778        335   \n",
+       "83  American Eagle  12/2010     12  2010    11526      36605       2004   \n",
+       "\n",
+       "    Enplaned  \n",
+       "0     992360  \n",
+       "1    1060618  \n",
+       "2    1227469  \n",
+       "3    1234451  \n",
+       "4    1267581  \n",
+       "..       ...  \n",
+       "79   1388344  \n",
+       "80   1336997  \n",
+       "81   1462312  \n",
+       "82   1346419  \n",
+       "83   1298950  \n",
+       "\n",
+       "[84 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dfj = dfj[(dfj[\"Airline\"] == \"American Eagle\")]\n",
-    "dfj.to_excel(\"Airline.xlsx\", index = False)"
+    "dfj"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting statsmodels\n",
-      "  Downloading statsmodels-0.14.2-cp310-cp310-win_amd64.whl.metadata (9.5 kB)\n",
-      "Requirement already satisfied: numpy>=1.22.3 in c:\\users\\esteb\\miniconda3\\envs\\iteso\\lib\\site-packages (from statsmodels) (1.26.4)\n",
-      "Requirement already satisfied: scipy!=1.9.2,>=1.8 in c:\\users\\esteb\\miniconda3\\envs\\iteso\\lib\\site-packages (from statsmodels) (1.14.0)\n",
-      "Requirement already satisfied: pandas!=2.1.0,>=1.4 in c:\\users\\esteb\\miniconda3\\envs\\iteso\\lib\\site-packages (from statsmodels) (2.2.2)\n",
-      "Collecting patsy>=0.5.6 (from statsmodels)\n",
-      "  Downloading patsy-0.5.6-py2.py3-none-any.whl.metadata (3.5 kB)\n",
-      "Requirement already satisfied: packaging>=21.3 in c:\\users\\esteb\\miniconda3\\envs\\iteso\\lib\\site-packages (from statsmodels) (24.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\esteb\\miniconda3\\envs\\iteso\\lib\\site-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2.9.0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\esteb\\miniconda3\\envs\\iteso\\lib\\site-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\esteb\\miniconda3\\envs\\iteso\\lib\\site-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2024.1)\n",
-      "Requirement already satisfied: six in c:\\users\\esteb\\miniconda3\\envs\\iteso\\lib\\site-packages (from patsy>=0.5.6->statsmodels) (1.16.0)\n",
-      "Downloading statsmodels-0.14.2-cp310-cp310-win_amd64.whl (9.8 MB)\n",
-      "   ---------------------------------------- 0.0/9.8 MB ? eta -:--:--\n",
-      "   ---- ----------------------------------- 1.0/9.8 MB 10.1 MB/s eta 0:00:01\n",
-      "   -------------------- ------------------- 5.0/9.8 MB 16.8 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 9.8/9.8 MB 19.2 MB/s eta 0:00:00\n",
-      "Downloading patsy-0.5.6-py2.py3-none-any.whl (233 kB)\n",
-      "Installing collected packages: patsy, statsmodels\n",
-      "Successfully installed patsy-0.5.6 statsmodels-0.14.2\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pip install statsmodels"
+    "dfj.to_excel(\"Airline.xlsx\", index = False)"
    ]
   }
  ],
