--- a/Airline.ipynb
+++ b/Airline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "[84 rows x 8 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
        "[84 rows x 5 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
        "[84 rows x 1 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
        "Text(0.5, 1.0, 'Vuelos realizados con exito')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -547,6 +547,15 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La crisis financiera de 2008 otra vez puso presión sobre la aerolínea. El 2 de julio de 2008, American Airlines anunció el despido temporal de hasta 950 asistentes de vuelo, a través de la Ley de Notificación de Ajustes y Reentrenamiento del Trabajador de Texas,28​ además suspendió los vuelos de 20 de sus aviones MD-80.29​ El centro de operaciones de American en el Aeropuerto Internacional Luis Muñoz Marín en San Juan, Puerto Rico fue reducido de 38 a 18 vuelos diarios.30​ Todos los aviones Airbus A300 fueron retirados a finales de agosto de 2009 y almacenados en Roswell, Nuevo México.  \n",
+    "\n",
+    "https://es.wikipedia.org/wiki/American_Airlines"
+   ]
   }
  ],
  "metadata": {
