--- a/ETS.ipynb
+++ b/ETS.ipynb
@@ -2229,6 +2229,13 @@
    "source": [
     "model_evaluation(test[\"y\"], forecast[\"hat\"], \"AutoETS\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Con el ETS en ZZZ confimamos que en efecto el mejor modelo parece ser el que usa errores multiplicativos, tendencia aditiva y sin estacionalidad "
+   ]
   }
  ],
  "metadata": {
